--- a/package.json
+++ b/package.json
@@ -6,15 +6,12 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
+    "start": "wrangler pages dev ./build/client",
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@netlify/remix-adapter": "^2.6.0",
-    "@remix-run/node": "^2.15.3",
-    "@remix-run/react": "^2.15.3",
-    "@remix-run/serve": "^2.17.3",
+    "@remix-run/cloudflare": "^2.17.3",
+    "@remix-run/react": "^2.17.3",
     "@supabase/supabase-js": "^2.57.4",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
@@ -40,7 +37,8 @@
     "tailwindcss": "^4.0.6",
     "typescript": "^5.1.6",
     "vite": "^5.4.16",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "^3.78.0"
   },
   "engines": {
     "node": ">=20.0.0"
